--- a/strings.ipynb
+++ b/strings.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 98,
    "id": "eb58ddc0",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "6bc6b903",
    "metadata": {},
    "outputs": [
@@ -387,9 +387,7 @@
     "\n",
     "    for char in str_1:\n",
     "        if char.lower() not in str_2:\n",
-    "            print(f\"letter '{char}' is not present in the second string\")\n",
-    "\n",
-    "    \n",
+    "            print(f\"letter '{char}' is not present in the second string\")  \n",
     "\n",
     "              \n",
     "        \n",
@@ -401,9 +399,7 @@
     "\n",
     "check_char(name, checks)\n",
     "print(\"\\n\")\n",
-    "check_char(surname,checks)\n",
-    "\n",
-    "\n"
+    "check_char(surname,checks)"
    ]
   },
   {
@@ -469,9 +465,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f50bfa12",
+   "metadata": {},
+   "source": [
+    "##### 12. Make the sum of the digits present in a string, and their average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "a2617ff6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total of the digit in the sentence is 19.\n",
+      "The average of the sum of the numbers in the sentence is 2.71.\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_numbers = \"132ds4f4w2e3F\"\n",
+    "\n",
+    "total = 0\n",
+    "counter = 0\n",
+    "\n",
+    "for x in string_numbers:\n",
+    "    if x.isdigit():\n",
+    "        total += int(x)\n",
+    "        counter += 1\n",
+    "\n",
+    "avg = total / counter\n",
+    "\n",
+    "print(f\"The total of the digit in the sentence is {total}.\\nThe average of the sum of the numbers in the sentence is {round(avg,2)}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef050166",
+   "metadata": {},
+   "source": [
+    "##### 13. In a given string, count the occurences of each word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "f139ce7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S': 1, 'u': 2, 'p': 2, 'e': 2, 'r': 2, 'c': 3, 'a': 3, 'l': 3, 'i': 7, 'f': 1, 'g': 1, 's': 2, 't': 1, 'x': 1, 'd': 1, 'o': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_string = \"Supercalifragilisticexpialidocious\"\n",
+    "\n",
+    "occurencies_dict = {}\n",
+    "\n",
+    "for let in a_string:\n",
+    "    occurencies_dict[let] = a_string.count(let)\n",
+    "\n",
+    "print(occurencies_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58bd08ee",
+   "metadata": {},
+   "source": [
+    "##### 14. Reverse a given string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "88ef2904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".elppa neerg A\n"
+     ]
+    }
+   ],
+   "source": [
+    "straight_string = \"A green apple.\"\n",
+    "\n",
+    "reversed_string = \"\"\n",
+    "\n",
+    "for char in range(len(straight_string),0,-1):\n",
+    "    reversed_string += straight_string[char-1]\n",
+    "\n",
+    "print(reversed_string)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "07fcd1ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".elppa neerg A\n"
+     ]
+    }
+   ],
+   "source": [
+    "straight_string = \"A green apple.\"\n",
+    "\n",
+    "reversed_string = \"\".join(reversed(straight_string))\n",
+    "\n",
+    "print(reversed_string)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2617ff6",
+   "id": "720ce9e7",
    "metadata": {},
    "outputs": [],
    "source": []
