--- a/strings.ipynb
+++ b/strings.ipynb
@@ -592,9 +592,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7f2cc53",
+   "metadata": {},
+   "source": [
+    "##### 15. Find the index of the last occurence of a given string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "720ce9e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The index of the last letter is 62\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"Emma is a data scientist who knows Python. Emma works at google.\"\n",
+    "\n",
+    "print(f\"The index of the last letter is {len(str1)-2}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "896ea6af",
+   "metadata": {},
+   "source": [
+    "##### 16. Divide a sentence into words and sort the words alphabetically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "c480b651",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Emma', 'is', 'a', 'data', 'scientist']\n",
+      "['Emma', 'a', 'data', 'is', 'scientist']\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"Emma-is-a-data-scientist\"\n",
+    "\n",
+    "words = str1.split(\"-\")\n",
+    "\n",
+    "print(words)\n",
+    "words.sort()\n",
+    "\n",
+    "print(words)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "720ce9e7",
+   "id": "8857ba54",
    "metadata": {},
    "outputs": [],
    "source": []
