--- a/oops.ipynb
+++ b/oops.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 99,
    "id": "e4bfe90e",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "id": "1c85b46b",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "id": "4c05b6dc",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "id": "da3d7d51",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "id": "e19b17d3",
    "metadata": {},
    "outputs": [
@@ -185,10 +185,7 @@
     }
    ],
    "source": [
-    "# First we add a new attribute to the subclass Houseboat\n",
-    "Houseboat.extra_tax = 0\n",
-    "\n",
-    "# Then we create a method that it wil be added to the class Houseboat\n",
+    "#Create a method that generates a new class attribute and it wil be added to the class Houseboat\n",
     "\n",
     "def calculate_extra_tax(self):\n",
     "\n",
@@ -203,9 +200,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56436242",
+   "metadata": {},
+   "source": [
+    "##### 6. Again, create an attribute from a method for another subclass. This time, consider the subclass House. For this type of building, we need to consider the collective cost of the building, which is 0.75 per square meter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "e8ce543b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def building_tax(self):\n",
+    "    \n",
+    "    self.common_tax = self.square * 0.75\n",
+    "\n",
+    "\n",
+    "\n",
+    "House.building_tax = building_tax\n",
+    "\n",
+    "print(apartment_23.common_tax)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ce543b",
+   "id": "c997ad12",
    "metadata": {},
    "outputs": [],
    "source": []
