--- a/oops.ipynb
+++ b/oops.ipynb
@@ -234,9 +234,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cb25b4a",
+   "metadata": {},
+   "source": [
+    "##### 7. Check the class of different objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "c997ad12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Roosvelt do not belongs to the class 'House'\n",
+      "Roosvelt belongs to the class 'Houseboat'\n"
+     ]
+    }
+   ],
+   "source": [
+    "if isinstance(roosevelt,House):\n",
+    "    print(f\"{roosevelt.name} belongs to the class 'House'\")\n",
+    "else:\n",
+    "    print(f\"{roosevelt.name} do not belongs to the class 'House'\")\n",
+    "\n",
+    "if isinstance(roosevelt,Houseboat):\n",
+    "    print(f\"{roosevelt.name} belongs to the class 'Houseboat'\")\n",
+    "else:\n",
+    "    print(f\"{roosevelt.name} do not belongs to the class 'Houseboat'\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c997ad12",
+   "id": "e8740cfb",
    "metadata": {},
    "outputs": [],
    "source": []
