--- a/oops.ipynb
+++ b/oops.ipynb
@@ -272,6 +272,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7320d7dd",
+   "metadata": {},
+   "source": [
+    "##### 8. Create a class that includes subclasses for different shapes.Then create a method in the parent class, that calculates the area for each shape."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "118a9ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area of the circle is 50.24 square\n",
+      "The area of the triangle is 12.0 square\n",
+      "The area of the parallelogram is 36 square\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shapes:\n",
+    "\n",
+    "    def __init__(self, nr_sides: int):\n",
+    "\n",
+    "        self.nr_sides = nr_sides\n",
+    "\n",
+    "\n",
+    "class Parallelogram(Shapes):\n",
+    "\n",
+    "    def __init__(self, nr_sides:int, lenght_base:int, lenght_height:int):\n",
+    "\n",
+    "        super().__init__(nr_sides)\n",
+    "        self.lenght_base = lenght_base\n",
+    "        self.lenght_height = lenght_height\n",
+    "\n",
+    "class Circle(Shapes):\n",
+    "\n",
+    "    def __init__(self, radius:int):\n",
+    "\n",
+    "        super().__init__(nr_sides=0)\n",
+    "        self.radius = radius\n",
+    "\n",
+    "class Triangle(Shapes):\n",
+    "\n",
+    "    def __init__(self, nr_sides:int, lenght_base:int, lenght_height:int):\n",
+    "        \n",
+    "        super().__init__(nr_sides)\n",
+    "        self.lenght_base = lenght_base\n",
+    "        self.lenght_height = lenght_height\n",
+    "\n",
+    "\n",
+    "def area_calculator(self)-> str:\n",
+    "\n",
+    "    if self.nr_sides == 3:\n",
+    "        area = (self.lenght_base * self.lenght_height) / 2\n",
+    "        return f\"The area of the triangle is {area} square\"\n",
+    "    \n",
+    "    elif self.nr_sides == 4:\n",
+    "        area = self.lenght_base * self.lenght_height\n",
+    "        return f\"The area of the parallelogram is {area} square\"\n",
+    "\n",
+    "    else:\n",
+    "        area = 3.14 * (self.radius**2)\n",
+    "        return f\"The area of the circle is {area} square\"\n",
+    "    \n",
+    "\n",
+    "Shapes.area_calculator = area_calculator\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Some testing\n",
+    "\n",
+    "circle = Circle(4)\n",
+    "triangle = Triangle(3,4,6)\n",
+    "rectangle = Parallelogram(4,12,3)\n",
+    "\n",
+    "print(circle.area_calculator())\n",
+    "print(triangle.area_calculator())\n",
+    "print(rectangle.area_calculator())        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e8740cfb",
