--- a/files_handling.ipynb
+++ b/files_handling.ipynb
@@ -154,9 +154,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cebc03bc",
+   "metadata": {},
+   "source": [
+    "##### 5. Count the number of characters in a text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bea34239",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "564\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(file)as text:\n",
+    "    text_char = text.read()\n",
+    "\n",
+    "print(len(text_char))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02560071",
+   "metadata": {},
+   "source": [
+    "##### 6. Count the number of lines in a text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c027ae10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(file)as text:\n",
+    "    text_char = text.readlines()\n",
+    "\n",
+    "print(len(text_char))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3901d0e3",
+   "metadata": {},
+   "source": [
+    "##### 7. Count how many times the word \"to\" appears in the text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "333f8f9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(file)as text:\n",
+    "    file_str = text.read()\n",
+    "\n",
+    "file_str_list = file_str.lower().split()\n",
+    "\n",
+    "to_counter = 0\n",
+    "\n",
+    "for word in file_str_list:\n",
+    "    if word == \"to\":\n",
+    "        to_counter += 1\n",
+    "\n",
+    "\n",
+    "print(to_counter)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4bb282",
+   "metadata": {},
+   "source": [
+    "##### 8. Now write \"File TESTED\" in the same file you were reading before."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3331c1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(file,'w')as text:\n",
+    "    text.write(\"File TESTED\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eecf7f83",
+   "metadata": {},
+   "source": [
+    "##### 9. On the same file, append a new line: \"File APPENDED\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c027ae10",
+   "id": "fd4ec47c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(file, 'a') as text:\n",
+    "    text.write(\"File APPENDED\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f7052f",
+   "metadata": {},
+   "source": [
+    "##### 10. After have created an empty text file, copy the text of the old file into the new one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "29f5b9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\sample.txt\"\n",
+    "\n",
+    "with open(old_file)as text:\n",
+    "    file_copy = text.read()\n",
+    "\n",
+    "new_file = r\"C:\\Users\\zanca\\OneDrive\\Desktop\\new_sample.txt\"\n",
+    "\n",
+    "with open(new_file, 'a')as text:\n",
+    "    text.write(file_copy)\n",
+    "    text.write(f\"\\n COMPLETED\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "439ceb1c",
    "metadata": {},
    "outputs": [],
    "source": []
