--- a/functions.ipynb
+++ b/functions.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "469d1f53",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total is 60.0 euro. Cash or card?\n"
+      "The total is 126.0 euro. Cash or card?\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
     "\n",
     "    return f\"The total is {total_to_pay} euro. Cash or card?\"\n",
     "\n",
-    "print(tax_calculator(10,23,17))"
+    "print(tax_calculator(10,23,17,55))"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "65241132",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "10"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d55ef7e1",
    "metadata": {},
    "outputs": [
@@ -267,18 +267,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You entered the same number. First and second number are 3\n"
+      "The list of even number is: [2, 4, 6, 8]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The list of even number is: []'"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
