--- a/loops.ipynb
+++ b/loops.ipynb
@@ -888,6 +888,48 @@
     "\n",
     "print(f\"The largest digit is: {largest}\\nThe smallest digit is {smallest}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d705d6c",
+   "metadata": {},
+   "source": [
+    "##### 23.Keep on asking the user to give you a number until it does not guess the right number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67101f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got it. The number was 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 6\n",
+    "\n",
+    "while True:\n",
+    "    guess = int(input(\"Guess a number between 0 and 10\"))\n",
+    "\n",
+    "    if guess == number:\n",
+    "        print(f\"Got it. The number was {number}\")\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d7909f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
