--- a/functions.ipynb
+++ b/functions.ipynb
@@ -388,6 +388,67 @@
     "\n",
     "print(area_tax(area_calculator(5,7), 10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1082abf",
+   "metadata": {},
+   "source": [
+    "##### 11. Write a function that:\n",
+    "- Accepts a list of scores (numbers between 0 and 100).\n",
+    "- Calculates the average of the scores.\n",
+    "- Determines a letter grade using the following scale: (A: 90–100), (B: 80–89), (C: 70–79), (D: 60–69), (F: below 60)\n",
+    "- Returns the letter grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "63824d9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The average score of the test is 61.17, so your grade will be D'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def grade_by_scoers(scores: list[int]) -> str:\n",
+    "\n",
+    "    grade = ''\n",
+    "    avg_score = round(sum(scores) / len(scores),2)\n",
+    "\n",
+    "    if avg_score >= 90:\n",
+    "        grade = \"A\"\n",
+    "    elif avg_score >= 80:\n",
+    "        grade = \"B\"\n",
+    "    elif avg_score >= 70:\n",
+    "        grade = \"C\"\n",
+    "    elif avg_score >= 60:\n",
+    "        grade = \"D\"\n",
+    "    else:\n",
+    "        grade = \"F\"\n",
+    "\n",
+    "    return f\"The average score of the test is {avg_score}, so your grade will be {grade}\"\n",
+    "\n",
+    "grade_by_scoers([33, 65, 71, 66, 62, 70])\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25a241cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
