--- a/functions.ipynb
+++ b/functions.ipynb
@@ -443,9 +443,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9cd6266",
+   "metadata": {},
+   "source": [
+    "##### 12. Define a function that accepts a number of attempts as integer. The function should randomly generate \"tail\" or \"head\" and ask the user to guess it. Then finally return if the users is lucky or not based on the number of correct guesses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "25a241cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess nr. 1 : tail\n",
+      "The coin is: tail\n",
+      "\n",
+      "Guess nr. 2 : tail\n",
+      "The coin is: tail\n",
+      "\n",
+      "Guess nr. 3 : head\n",
+      "The coin is: head\n",
+      "\n",
+      "You are lucky, you guessed correctly 3 times out of 3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def head_tail(nr_attempts: int)-> str:\n",
+    "\n",
+    "    right_guess = 0\n",
+    "    wrong_guess = 0\n",
+    "\n",
+    "    for x in range(nr_attempts):\n",
+    "        guess = input(\"Head or Tail?\")\n",
+    "        coin = random.randint(0,1)\n",
+    "        print(f\"Guess nr. {x+1} : {guess.lower()}\")        # extra line to keep tracking of the guess\n",
+    "        if coin == 0 :\n",
+    "            coin = \"head\"\n",
+    "        else:\n",
+    "            coin = \"tail\"\n",
+    "\n",
+    "        print(f\"The coin is: {coin}\\n\")               # extra line to keep tracking of the coin result\n",
+    "\n",
+    "        if coin == guess.lower():\n",
+    "            right_guess += 1\n",
+    "        else:\n",
+    "            wrong_guess += 1\n",
+    "\n",
+    "    if right_guess > wrong_guess:\n",
+    "        return f\"You are lucky, you guessed correctly {right_guess} times out of {nr_attempts}.\" \n",
+    "    elif right_guess == wrong_guess:\n",
+    "        return f\"Ah, half guess correct, half wrong.\"\n",
+    "    else:\n",
+    "        return f\"You are not that lucky, {wrong_guess} times out of {nr_attempts} you guessed wrongly\"\n",
+    "            \n",
+    "              \n",
+    "print(head_tail(3))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a241cf",
+   "id": "17520e6a",
    "metadata": {},
    "outputs": [],
    "source": []
