--- a/oops.ipynb
+++ b/oops.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "e4bfe90e",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "id": "1c85b46b",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "id": "4c05b6dc",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "id": "da3d7d51",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "e19b17d3",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 25,
    "id": "e8ce543b",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 26,
    "id": "c997ad12",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 27,
    "id": "118a9ba3",
    "metadata": {},
    "outputs": [
@@ -359,8 +359,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "89881c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a/b = 2\n",
+      "We are in else block \n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = 4\n",
+    "    b = 2\n",
+    "    c = a / b\n",
+    "    print(\"a/b = %d\" % c)\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Can't divide by zero\")\n",
+    "else:\n",
+    "    print(\"We are in else block \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e8740cfb",
+   "id": "f8d66ed8",
    "metadata": {},
    "outputs": [],
    "source": []
