--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -18,26 +18,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "cec3c41f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You cannot divide by zero.\n"
+     ]
+    }
+   ],
    "source": [
-    "a = int(input(\"Enter a number.\"))\n",
-    "b = int(input(\"Enter a number.\"))\n",
-    "\n",
     "try:\n",
-    "    c = a / b\n",
+    "    a = float(input(\"Enter a number.\"))\n",
+    "    b = float(input(\"Enter a number.\"))\n",
+    "\n",
+    "    c = round((a / b) , 3)\n",
+    "\n",
     "    print(f\"The result of the division is {c}\")\n",
     "\n",
-    "except:\n",
+    "except ValueError:\n",
+    "    print(\"You have entered a different character than a number.\")\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"You cannot divide by zero.\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "895a9e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
