--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -18,15 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cec3c41f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You cannot divide by zero.\n"
+     "ename": "SyntaxError",
+     "evalue": "'continue' not properly in loop (1687013895.py, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[45], line 14\u001b[1;36m\u001b[0m\n\u001b[1;33m    continue\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'continue' not properly in loop\n"
      ]
     }
    ],
@@ -43,14 +44,67 @@
     "    print(\"You have entered a different character than a number.\")\n",
     "\n",
     "except ZeroDivisionError:\n",
-    "    print(\"You cannot divide by zero.\")\n",
-    "    "
+    "    print(\"You cannot divide by zero.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8895aba5",
+   "metadata": {},
+   "source": [
+    "##### 2. Check if a list contains only numbers. If it contains any non-numeric values, handle the exception and print an appropriate message."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "895a9e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At index 0 we do have an integer: 10\n",
+      "At index 1 we do have an integer: 20\n",
+      "At index 2 there is thirty, which is not a number \n",
+      "At index 3 we do have an integer: 40\n",
+      "At index 4 we do have an integer: 50\n",
+      "\n",
+      "\n",
+      "At index 0 we do have an integer: 44\n",
+      "At index 1 we do have a float: 0.32\n",
+      "At index 2 we do have an integer: 78\n",
+      "At index 3 we do have an integer: 91\n",
+      "At index 4 we do have an integer: 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def check_list_numbers(list_char):\n",
+    "\n",
+    "    for index in range(len(list_char)):\n",
+    "        try:        \n",
+    "            if isinstance(list_char[index],int):\n",
+    "                print(f\"At index {index} we do have an integer: {list_char[index]}\")\n",
+    "            elif isinstance(list_char[index],float):\n",
+    "                print(f\"At index {index} we do have a float: {list_char[index]}\")\n",
+    "            else:\n",
+    "                raise ValueError\n",
+    "        \n",
+    "        except ValueError:\n",
+    "            print(f\"At index {index} there is {list_char[index]}, which is not a number \")\n",
+    "\n",
+    "\n",
+    "check_list_numbers([10, 20, 'thirty', 40, 50])\n",
+    "print(f\"\\n\")\n",
+    "check_list_numbers([44, 0.32, 78, 91, 100])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "895a9e3e",
+   "id": "7f5e487d",
    "metadata": {},
    "outputs": [],
    "source": []
