--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -18,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cec3c41f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'continue' not properly in loop (1687013895.py, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[45], line 14\u001b[1;36m\u001b[0m\n\u001b[1;33m    continue\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'continue' not properly in loop\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of the division is 2.0\n"
      ]
     }
    ],
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "895a9e3e",
    "metadata": {},
    "outputs": [
@@ -67,21 +66,21 @@
      "text": [
       "At index 0 we do have an integer: 10\n",
       "At index 1 we do have an integer: 20\n",
-      "At index 2 there is thirty, which is not a number \n",
+      "At index 2 there is 'rebel', which is not a number \n",
       "At index 3 we do have an integer: 40\n",
-      "At index 4 we do have an integer: 50\n",
+      "At index 4 we do have a float: 4.2\n",
       "\n",
       "\n",
       "At index 0 we do have an integer: 44\n",
       "At index 1 we do have a float: 0.32\n",
       "At index 2 we do have an integer: 78\n",
       "At index 3 we do have an integer: 91\n",
-      "At index 4 we do have an integer: 100\n"
+      "At index 4 we do have a float: 1212.34\n"
      ]
     }
    ],
    "source": [
-    "def check_list_numbers(list_char):\n",
+    "def check_list_numbers(list_char)->None:\n",
     "\n",
     "    for index in range(len(list_char)):\n",
     "        try:        \n",
@@ -93,12 +92,20 @@
     "                raise ValueError\n",
     "        \n",
     "        except ValueError:\n",
-    "            print(f\"At index {index} there is {list_char[index]}, which is not a number \")\n",
+    "            print(f\"At index {index} there is '{list_char[index]}', which is not a number \")\n",
     "\n",
     "\n",
-    "check_list_numbers([10, 20, 'thirty', 40, 50])\n",
+    "check_list_numbers([10, 20, 'rebel', 40, 4.2])\n",
     "print(f\"\\n\")\n",
-    "check_list_numbers([44, 0.32, 78, 91, 100])"
+    "check_list_numbers([44, 0.32, 78, 91, 1212.34])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e634fe31",
+   "metadata": {},
+   "source": [
+    "##### 3. Create a function that checks if a given food item is gluten-free. If the food item is not gluten-free, raise a custom exception and handle it appropriately."
    ]
   },
   {
@@ -107,7 +114,16 @@
    "id": "7f5e487d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gluten_free_check(pasta_brand: list[tuple]):\n",
+    "\n",
+    "    for pasta in pasta_brand:\n",
+    "        if pasta[1] == \"gluten\":\n",
+    "            raise Exception(f\"{pasta} contains gluten\")\n",
+    "        \n",
+    "        elif pasta[1] == \"gluten-free\":\n",
+    "            print(f\"{pasta} is gluten free\")\n"
+   ]
   }
  ],
  "metadata": {
