--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -105,7 +105,15 @@
    "id": "e634fe31",
    "metadata": {},
    "source": [
-    "##### 3. Create a function that checks if a given food item is gluten-free. If the food item is not gluten-free, raise a custom exception and handle it appropriately."
+    "##### 3. Create a function that checks if a given dish is gluten-free. If the food item does not specify whether it is gluten-free, raise a custom exception and handle it appropriately."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "924d6caa",
+   "metadata": {},
+   "source": [
+    "dishes = [(\"Ceaser Salad\", True), (\"Carbonara\", False), (\"Welsh Rarebit\", False), (\"Croque monsieur\", True), (\"Meat_balls\", True), (\"Pizza Margherita\", False) , (\"Pasta al Pesto\", True) , (\"Sate' Ayam\", False), (\"Tacos\", False)]"
    ]
   },
   {
@@ -113,17 +121,77 @@
    "execution_count": null,
    "id": "7f5e487d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ceaser Salad contains gluten\n",
+      "Carbonara is gluten free\n",
+      "Welsh Rarebit: Information not available\n"
+     ]
+    }
+   ],
    "source": [
-    "def gluten_free_check(pasta_brand: list[tuple]):\n",
+    "dishes = [(\"Ceaser Salad\", True), (\"Carbonara\", False), (\"Welsh Rarebit\"), \n",
+    "          (\"Croque monsieur\", True), (\"Meat_balls\", True), (\"Pizza Margherita\", False) ,\n",
+    "            (\"Pasta al Pesto\", True) , (\"Sate' Ayam\"), (\"Tacos\", False)]\n",
     "\n",
-    "    for pasta in pasta_brand:\n",
-    "        if pasta[1] == \"gluten\":\n",
-    "            raise Exception(f\"{pasta} contains gluten\")\n",
+    "\n",
+    "\n",
+    "def gluten_free_check(dishes: list[tuple]):\n",
+    "\n",
+    "    try:\n",
+    "        for dish in dishes:\n",
+    "\n",
+    "            if dish[1] is True:\n",
+    "                print(f\"{dish[0]} contains gluten\")     \n",
+    "                   \n",
+    "            elif dish[1] is False:\n",
+    "                print(f\"{dish[0]} is gluten free\")\n",
+    "\n",
+    "            else:\n",
+    "                raise Exception\n",
+    "                         \n",
+    "            \n",
+    "    except Exception:\n",
+    "        print(f\"{dish}: Information not available\")         \n",
+    "   \n",
     "        \n",
-    "        elif pasta[1] == \"gluten-free\":\n",
-    "            print(f\"{pasta} is gluten free\")\n"
+    "\n",
+    "\n",
+    "\n",
+    "gluten_free_check(dishes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ac3a2b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trfffue\n"
+     ]
+    }
+   ],
+   "source": [
+    "calm = False\n",
+    "\n",
+    "if not calm:\n",
+    "    print(\"Trfffue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ddf1630",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
