--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "7f5e487d",
    "metadata": {},
    "outputs": [
@@ -126,9 +126,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ceaser Salad contains gluten\n",
-      "Carbonara is gluten free\n",
-      "Welsh Rarebit: Information not available\n"
+      "Ceaser Salad --> gluten\n",
+      "Carbonara --> gluten free\n",
+      "Welsh Rarebit --> Information not available\n",
+      "Croque monsieur --> gluten\n",
+      "Meat_balls --> gluten\n",
+      "Pizza Margherita --> gluten free\n",
+      "Pasta al Pesto --> gluten\n",
+      "Sate' Ayam --> Information not available\n",
+      "Tacos --> gluten free\n"
      ]
     }
    ],
@@ -141,24 +147,24 @@
     "\n",
     "def gluten_free_check(dishes: list[tuple]):\n",
     "\n",
-    "    try:\n",
-    "        for dish in dishes:\n",
-    "\n",
+    "    for dish in dishes:   \n",
+    "    \n",
+    "        try:\n",
+    "        \n",
     "            if dish[1] is True:\n",
-    "                print(f\"{dish[0]} contains gluten\")     \n",
+    "                print(f\"{dish[0]} --> gluten\")     \n",
     "                   \n",
     "            elif dish[1] is False:\n",
-    "                print(f\"{dish[0]} is gluten free\")\n",
+    "                print(f\"{dish[0]} --> gluten free\")\n",
     "\n",
     "            else:\n",
     "                raise Exception\n",
     "                         \n",
     "            \n",
-    "    except Exception:\n",
-    "        print(f\"{dish}: Information not available\")         \n",
+    "        except Exception:\n",
+    "            print(f\"{dish} --> Information not available\")         \n",
     "   \n",
     "        \n",
-    "\n",
     "\n",
     "\n",
     "gluten_free_check(dishes)"
@@ -166,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "ac3a2b5d",
    "metadata": {},
    "outputs": [
@@ -174,15 +180,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trfffue\n"
+      "\u001b[1mThomas\u001b[0m is learning Python!\n"
      ]
     }
    ],
    "source": [
-    "calm = False\n",
-    "\n",
-    "if not calm:\n",
-    "    print(\"Trfffue\")"
+    "name = \"Thomas\"\n",
+    "print(f\"\\033[1m{name}\\033[0m is learning Python!\")\n"
    ]
   },
   {
