--- a/exceptions.ipynb
+++ b/exceptions.ipynb
@@ -109,14 +109,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "924d6caa",
-   "metadata": {},
-   "source": [
-    "dishes = [(\"Ceaser Salad\", True), (\"Carbonara\", False), (\"Welsh Rarebit\", False), (\"Croque monsieur\", True), (\"Meat_balls\", True), (\"Pizza Margherita\", False) , (\"Pasta al Pesto\", True) , (\"Sate' Ayam\", False), (\"Tacos\", False)]"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "7f5e487d",
@@ -172,28 +164,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e895061c",
+   "metadata": {},
+   "source": [
+    "##### 4. Implement a function that takes a list of strings and converts them to integers. Handle the eventual exceptions that may arise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "30b6bffe",
    "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "ac3a2b5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mThomas\u001b[0m is learning Python!\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = \"Thomas\"\n",
-    "print(f\"\\033[1m{name}\\033[0m is learning Python!\")\n"
-   ]
   },
   {
    "cell_type": "code",
